added first file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
                     
                 </div>
             </div>
+
+            <!--div item-->
+            <div class="hero-flower">
+                <div class="fresh-item">
+                    <h1 class="all-fresh">ALWAYS <span class="design-item">FRESH FLOWERS</span>
+                    </h1>
+                    <P>Indulge your senses with the beauty and fragrance
+                    of our fresh flower shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh
+                    flowers that are perfect for any occasion.
+                    </P>
+                </div>
+                <div class="beauty-flower">
+                    <img src="assets/hero-flower.png" alt="" width="700px" height="700px">
+                </div>
+            </div>
     </header>
 </body>
 </html>
