added a second file

--- a/index.html
+++ b/index.html
@@ -39,5 +39,64 @@
                 </div>
             </div>
     </header>
+    <main>
+                <!--section 1-->
+        <section class="PLants-title">
+            <div class="big-title">
+                <h1><span class="our-item">Our</span> Plants</h1>
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="big-item">
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>
+                <div class="banner-title">
+                    <img src="assets/sample-flower-image.png" alt="" width="400px" >
+                    <h1>Lily Blossom</h1>
+                    <h1>20 USD</h1>
+                    <button class="button-item">ADD TO CART</button>
+                </div>            
+            </div>
+        </section>
+    </main>
 </body>
 </html>
