added a third file

--- a/index.html
+++ b/index.html
@@ -97,6 +97,23 @@
                 </div>            
             </div>
         </section>
+        <!--section 2-->
+        <section class="lover-item">
+            <nav class="nav-style">
+                <div class="img-title">
+                    <img src="assets/flower-store.png" alt="" width="900px" height="1000px" class="badge-item">
+                    <img src="assets/trusted-badge.png" alt="" width="600px" height="600px" class="badge">
+                </div>
+                <div class="h1-title">
+                    <h1>Flower & Plants Lover</h1>
+                    <ul class="li-title">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </nav>
+        </section>
     </main>
 </body>
 </html>
