added a fourth file

--- a/index.html
+++ b/index.html
@@ -114,6 +114,41 @@
                 </div>
             </nav>
         </section>
+        <!--section comment 3-->
+        <section class="Latest-item">
+            <nav class="title-nav">
+                <div class="class-hide">
+                    <h1><span class="vip-item">Latest</span> Deals</h1>
+                    <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                </div>
+            </nav>
+
+            <nav class="box-item">
+                <div class="box-title"> 
+                        <div class="promo-banner">
+                            <img src="assets/deal-bloom.png" alt="" width="800px">
+                            <div class="promo-content">
+                                <h1>60% off | Bloom plant</h1>
+                                <a href="#">Shop Now</a>
+                            </div>
+                        </div>
+                        <div class="live-banner">
+                            <img src="assets/deal-ana.png" alt="" width="800px">
+                            <div class="one-content">
+                                <h1>30% off | Ana plan</h1>
+                                <a href="#">Shop New</a>
+                            </div>
+                        </div>
+                </div>
+                <div class="server-banner">
+                    <img src="assets/deal-zabo.png" alt="" width="1600px">
+                    <div class="some-content">
+                        <h1>25% Off | Zabo Plant</h1>
+                        <a href="#">Shop Now</a>
+                    </div>
+                </div>
+            </nav>
+        </section>
     </main>
 </body>
 </html>
