added a fifth file

--- a/index.html
+++ b/index.html
@@ -150,5 +150,19 @@
             </nav>
         </section>
     </main>
+    <footer>
+        <section class="news-latter">
+            <div class="Subscribe-content">
+                <img src="assets/news-letter-bg.png" alt="" width="3700px">
+                <div class="sub-item">
+                    <h1>Join the colorful Bunch</h1>
+                    <form class="Subscribe-form">
+                        <input type="email" placeholder="Write email" required>
+                        <button type="submite">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
