added a sixth file

--- a/index.html
+++ b/index.html
@@ -163,6 +163,36 @@
                 </div>
             </div>
         </section>
+
+        <!--section -->
+
+        <section class="homes-item">
+            <nav class="your-item">
+                <img src="assets/logo.png" alt="" width="400px">
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </nav>
+            <nav>
+                <p>Home</p>
+                <p>About Us</p>
+                <p>Blog</p>
+                <p>FAQ</p>
+                <p>Contact Us</p>
+            </nav>
+            <nav>
+                <p>Feature</p>
+                <p>Pricing</p>
+                <p>Privacy policy</p>
+                <p>Terms of Service</p>
+                <p>Help Center</p>
+
+            </nav>
+            <nav class="src-item">
+                <img src="assets/icon-linkedin.png" alt="" width="100px">
+                <img src="assets/icon-twitter.png" alt="" width="100px">
+                <img src="assets/icon-facebook.png" alt="" width="100px">
+                <img src="assets/icon-youtube.png" alt="" width="100px">
+            </nav>
+        </section>
     </footer>
 </body>
 </html>
